# Text-editor-

./: CMakeLists.txt  CS112-203-2nd-S1-20210049-20210067-20210133-A4-TextEditorApp.cpp  CS112-203-2nd-S1-20210049-20210067-20210133-A4-TextEditorFunc.cpp  CS112-203-2nd-S1-20210049-20210067-20210133-A4-TextEditorFunc.h  ans.txt  fileTEST.txt  gg.txt  main.cpp  text_editor-func.cpp  text_editor.h
